# euler

./: .gitignore  LICENSE  euler.cabal  flake.nix
.github/workflows/: ci.yml
src/: Inputs.hs  MyLib.hs
test/: Main.hs
