cabal-version:   3.0
name:            euler
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Adam Matthews
build-type:      Simple

library
    exposed-modules:  MyLib
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base

test-suite euler-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        euler
